infra/k8s/base/toolbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showup2move-toolbox
spec:
  selector:
    app: showup2move-toolbox
  ports:
    - name: http
      port: 5000
      targetPort: http
