infra/k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showup2move-web
spec:
  selector:
    app: showup2move-web
  ports:
    - name: http
      port: 80
      targetPort: http
